# kilroy

./: .dockerignore  .gitattributes  .gitignore  404.html  Dockerfile  LICENSE  README.md  environment.yml  index.html  pyproject.toml  sitemap.xml
.github/: release-drafter.yml
.github/workflows/: docker-build.yml  docker-push.yml  docker.yml  docs.yaml  docs.yml  draft.yml  pypi.yml  registry.yml  test-docker.yml  test-multiplatform.yml  test.yml
architecture/: index.html
customization/faces/: index.html
customization/modules/: index.html
docs/: mkdocs.yaml
docs/docs/: architecture.md  example.md  how-it-works.md  index.md  installation.md
docs/docs/customization/: faces.md  modules.md
docs/docs/usage/: configuration.md  dashboard.md  training.md
example/: .env  README.md  docker-compose.yaml  index.html
how-it-works/: index.html
installation/: index.html
kilroy/: README.md  pyproject.toml
kilroy/docs/: mkdocs.yml
kilroy/docs/docs/: index.md
kilroy/docs/docs/usage/: cli.md
kilroy/src/kilroy/: __init__.py  __main__.py  codecs.py  config.py  factories.py  models.py  runner.py  utils.py
kilroy/src/kilroy/api/: controller.py  messages.py
kilroy/src/kilroy/server/: __init__.py  controller.py  server.py
kilroy/tests/: conftest.py
kilroy/tests/functional/: test_kilroy.py
search/: search_index.json
usage/: index.html
usage/configuration/: index.html
usage/dashboard/: index.html
usage/training/: index.html
